--- a/src/components/Cart/CartItem.css
+++ b/src/components/Cart/CartItem.css
@@ -13,13 +13,14 @@
 }
 
 .container {
-    padding: 5px;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
-    margin: 5px 10px;
+    justify-content: center;
+    margin: 5px ;
     width: fit-content;
-    /* padding: 5px; */
+    padding: 5px;
+    overflow: hidden;
 }
 
 .cart-img {
