--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,10 +1,10 @@
 
 .login-container{
-    margin: 3% 12% ;
+    margin:  12% ;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 .login-form{
@@ -17,4 +17,8 @@
 h3{
     text-align: center;
     margin-bottom: 20px;
+}
+p  a{
+    /* margin-top: 0; */
+    text-decoration: none;
 }
