--- a/src/components/Cart/CartItem.css
+++ b/src/components/Cart/CartItem.css
@@ -2,8 +2,8 @@
     display: flex;
     border: 1px solid gray;
     border-radius: 10px;
-    height: 70px;
-    margin: 20px 120px;
+    margin: 20px 40px 0px;
+    max-width: 1100px;
     justify-content: space-between;
 }
 
@@ -16,7 +16,7 @@
     display: flex;
     /* flex-direction: column; */
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     margin: 5px ;
     width: fit-content;
     padding: 5px;
@@ -24,14 +24,15 @@
 }
 
 .cart-img {
-    height: 50px;
-    width: 50px;
+    height: 90px;
+    width: 90px;
 }
 
 .container-2 {
     display: flex;
     justify-content: flex-end;
     width: 50%;
+    margin-right: 10px;
 }
 
 .quantity {
@@ -42,11 +43,11 @@
     border-radius: 10px;
 }
 .deleteButton{
-    height:50px ;
+    max-height:50px ;
     align-self: center;
     width: max-content;
-    padding: 0px 5px;
-
+    padding:  5px;
+    
 }
 
 .btn-group {
@@ -63,4 +64,30 @@
 h5{
     width: 100%;
     font-size: 1rem;
+}
+@media screen and (max-width:578px) {
+
+    .cart-item, container{
+        flex-direction: column;
+    }
+    .container-1,.container-2{
+        width: 100%;
+        height: 70px;
+    }
+    .container-2{
+        justify-content: space-around;
+        height: 50px;
+    }
+    .container{
+        /* margin-left:auto; */
+        text-align: justify;
+    }
+    .cart-img{
+        height: 80px;
+        width: 80px;
+    }
+    .btn {
+        padding:0 8px;
+    }
+
 }
