--- a/src/components/Shared/Footer/Footer.css
+++ b/src/components/Shared/Footer/Footer.css
@@ -4,6 +4,9 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
 .footer p{
     margin: 3px 0;
