--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -1,8 +1,24 @@
+.cart-container {
+    height: 100vh;
+    width: 100%;
+}
+
+.cart-container {
+    height: fit-content;
+}
+
 .totalPrice {
     margin: 20px;
     padding-right: 54px;
     text-align: right;
 }
-.cart-container{
-    
+
+.allCartItems {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+}
+.main-heading{
+    margin:0 0 0 32px;
 }
