--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,6 +1,6 @@
 
 .login-container{
-    margin:  12% ;
+    margin:  10% ;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -16,9 +16,13 @@
 }
 h3{
     text-align: center;
-    margin-bottom: 20px;
+    font-weight: 700;
 }
-p  a{
-    /* margin-top: 0; */
+.new-user{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+ a{
     text-decoration: none;
 }
