--- a/src/components/Shared/Header/Header.css
+++ b/src/components/Shared/Header/Header.css
@@ -18,3 +18,41 @@ nav{
 .bg-blue{
     background-color: #e3f2fd !important;
 }
+
+.header-left {
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    align-items: center;
+}
+.search-container{
+    display: flex;
+    align-items: center;
+    background-color:white;
+    padding: 0px 5px;
+    border-radius: 4px;
+    height: 32px;
+    width: 100%;
+    margin:0px 5px;
+}
+.navbar-brand,.nav-link{
+    font-weight: 600;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.search-container:hover{
+    box-shadow:0 0px 5px 2px rgba(0,0,0,0.2);
+}
+.search-container> input{
+    outline: none ;
+    border: none;
+    height: 100%;
+    margin-left: 5px;
+    border-left: 1px solid lightgray;
+    padding-left: 10px; 
+    cursor: pointer;   
+}
+
+.navbar-toggler{
+    margin: 10px 0px;
+    padding:  0px 5px;
+}
